Update thermometer calibration test (#4)
* Rename run configurations

* Update thermometer_calibration test

* Introduce StepInterface for contact with clients

* Add settings to configure calibration

* Rename Instruction to Procedure

* Fix view_javafx maven tests